--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,7 @@
 dataset:
   root: data
   categories: ["soybean"]
+  num_views: 1
 
 # Model hyperparameters
 model:
@@ -30,5 +31,5 @@ finetune:
 # Inference
 inference:
   model_path: ckpt/20250623_232126/model_epoch25_score0.0838.pth
-  image_path: img/09.png
+  image_paths: [img/09.png]
   save_path: result/09_2.ply
