--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   app:
     build: .
     volumes:
-      - .:/app
+      - ./data:/app/data
     working_dir: /app
     deploy:
       resources:
